--- a/100_mainpage/less/styles.less
+++ b/100_mainpage/less/styles.less
@@ -9,6 +9,7 @@
 	background: url('../images/wrapper-bg.png');
 	padding: 0 20px;
 	min-height:100%;
+	padding-bottom: 80px;
 	& > .y-container{
 		width: 100%;
 		min-height:100%;
@@ -206,12 +207,12 @@
 			-moz-box-sizing:border-box;
 			border-left:solid 1px #cdcdcd;
 			background: #f4f4f4;
-			height: 2000px;	
+			//height: 2000px;	
 			float: right;	
 		}
 		.y-content-container{
 			overflow: hidden;	
-			height: 2000px;
+			//height: 2000px;
 			background: @white;
 			h1{
 				padding: 1% 5%;
@@ -233,10 +234,8 @@
 					margin: 5% auto;
 				}
 				p{
-					font-family: "Open Sans", sans-serif;
 					color: #687c8a;
 					font-size: 1.4rem;
-					font-weight: 400;
 					line-height: 155%;
 					text-align: left;
 					margin: 2% 0;	
@@ -255,10 +254,8 @@
 					margin: 5% auto;
 				}
 				p{
-					font-family: "Open Sans", sans-serif;
 					color: #687c8a;
 					font-size: 1.4rem;
-					font-weight: 400;
 					line-height: 155%;
 					text-align: left;	
 				}
@@ -274,7 +271,6 @@
 					border: solid 2px #efc45e;
 					border-radius: 10px;
 					padding: 3%;
-					font-family: "Open Sans", sans-serif;
 					color: #404c53;
 					font-size: 1.5rem;
 					font-style: italic;
@@ -295,19 +291,15 @@
 					width: 25%;
 					text-align: center;
 					p.y-number{
-						font-family: "Open Sans", sans-serif;
 						color: #131329;
 						font-size: 3.6rem;
-						font-weight: 400;
 						line-height: 120%;
 						text-align: center;
 						margin: 5% auto;
 					}
 					p.y-name{
-						font-family: "Open Sans", sans-serif;
 						color: #131329;
 						font-size: 1.6rem;
-						font-weight: 400;
 						line-height: 120%;
 						text-align: center;
 						margin: 1% auto;
@@ -318,19 +310,15 @@
 					width: 25%;
 					text-align: center;
 					p.y-number{
-						font-family: "Open Sans", sans-serif;
 						color: #131329;
 						font-size: 3.6rem;
-						font-weight: 400;
 						line-height: 120%;
 						text-align: center;
 						margin: 5% auto;
 					}
 					p.y-name{
-						font-family: "Open Sans", sans-serif;
 						color: #131329;
 						font-size: 1.6rem;
-						font-weight: 400;
 						line-height: 120%;
 						text-align: center;
 						margin: 1% auto;
@@ -341,19 +329,15 @@
 					width: 25%;
 					text-align: center;
 					p.y-number{
-						font-family: "Open Sans", sans-serif;
 						color: #131329;
 						font-size: 3.6rem;
-						font-weight: 400;
 						line-height: 120%;
 						text-align: center;
 						margin: 5% auto;
 					}
 					p.y-name{
-						font-family: "Open Sans", sans-serif;
 						color: #131329;
 						font-size: 1.6rem;
-						font-weight: 400;
 						line-height: 120%;
 						text-align: center;
 						margin: 1% auto;
@@ -364,19 +348,15 @@
 					width: 25%;
 					text-align: center;
 					p.y-number{
-						font-family: "Open Sans", sans-serif;
 						color: #131329;
 						font-size: 3.6rem;
-						font-weight: 400;
 						line-height: 120%;
 						text-align: center;
 						margin: 5% auto;
 					}
 					p.y-name{
-						font-family: "Open Sans", sans-serif;
 						color: #131329;
 						font-size: 1.6rem;
-						font-weight: 400;
 						line-height: 120%;
 						text-align: center;
 						margin: 1% auto;
@@ -396,7 +376,6 @@
 					padding: 3% 6%;
 				}
 				p{
-					font-family: "Open Sans", sans-serif;
 					color: #ffffff;
 					font-size: 1.8rem;
 					font-weight: 700;
@@ -410,10 +389,8 @@
 					background: #ffffff;
 					border-radius: 4px;
 					box-shadow: 0px 1px 0px 0px #4c760c;
-					font-family: "Open Sans", sans-serif;
 					color: #333333;
 					font-size: 1.8rem;
-					font-weight: 400;
 					text-align: left;
 					text-decoration: none;
 					padding: 1% 2%;
@@ -422,6 +399,155 @@
 					margin: 5% 1%;
 				}
 			}
+		}
+	}
+	& > .y-subscribe{
+		background: #bed6e3;
+		display: block;
+		text-align: center;
+		margin: auto;
+		width: 100%;
+		padding: 3% 0;
+		border-top: solid 1px #cdcdcd;
+		border-bottom: solid 1px #cdcdcd;
+		.y-subscribe-form{
+			background: #ffffff;
+			width: 75%;
+			margin: auto;
+			border: solid 1px #cdcdcd;
+			border-radius: 10px;
+			padding-bottom: 3%;
+			img{
+				float: right;
+				position: absolute;
+				top: -1px;
+				right: -2px;
+			}
+			p.y-form-header{
+				color: #323232;
+				font-size: 1.9rem;
+				font-weight: 600;
+				line-height: 150%;
+				text-align: center;
+				margin: 0;
+				padding-top: 3%;
+				padding-bottom: 1%;
+			}
+			p{				
+				color: #323232;
+				font-size: 1.4rem;
+				line-height: 150%;
+				text-align: center;
+				margin: 0;
+				padding-bottom: 3%;
+			}
+			input[type="text"]{
+				font-family: Arial;
+				color:  #323232;
+				font-size: 1.2rem;
+				letter-spacing: 0.6px;
+				text-align: left;
+				padding: 1%;
+				width: 27%;
+				border-radius: 2px;
+				border: solid 1px #cdcdcd;
+				margin-right: 2%;
+			}
+			input[type="submit"]{
+				background: #7eb12f;
+				border-radius: 4px;
+				border: solid 1px #b5de76;
+				box-shadow: 0px 1px 0px 0px #567a1f;
+				color: #ffffff;
+				font-size: 1.7rem;
+				line-height: 0%;
+				text-align: center;
+				padding: 2%;
+				width: 20%;
+				cursor: pointer;				
+			}
+			input[type="submit"]:hover{
+				background: #7eb12f+#111;
+			}
+		}
+	}	
+	.footer{
+		background: #ffffff;
+		border: solid 1px #cdcdcd;
+		padding: 4%;
+		text-align: center;
+		p{
+			color: #323232;
+			font-size: 1.8rem;
+			line-height: 140%;
+			text-align: center;
+			margin: 0;
+		}
+		.y-email{
+			float: left;
+			width: 34%;
+			text-align: center;
+			margin: 3% 0;
+			p{				
+				color: #ff9100;
+				font-size: 1.5rem;
+				font-weight: 700;
+				line-height: 200%;
+				text-align: center;
+				span{
+					color: #323232;
+					font-weight: 600;
+				}
+			}
+		}
+		.y-phone{
+			float: left;
+			width: 33%;
+			text-align: center;
+			margin: 3% 0;
+			p{
+				color: #ff9100;
+				font-size: 1.5rem;
+				font-weight: 700;
+				line-height: 200%;
+				text-align: center;
+				span{
+					color: #323232;
+					font-weight: 600;
+				}
+			}
+		}
+		.y-site{
+			float: left;
+			width: 33%;
+			text-align: center;
+			margin: 3% 0;
+			p{				
+				color: #ff9100;
+				font-size: 1.5rem;
+				font-weight: 700;
+				line-height: 200%;
+				text-align: center;
+				span{
+					color: #323232;
+					font-weight: 600;
+				}
+			}
+		}
+		a.y-link{
+			color: #009bcd;
+			font-size: 1.5rem;
+			line-height: 170%;
+			text-decoration: underline;
+			padding-left: 2%;
+		}
+		img{
+			padding: 5%;
+		}
+		p.y-fuuter{
+			font-family: Arial;
+			color: #323232;
+			font-size: 1.2rem;
 		}
 	}
 }
