--- a/100_mainpage/less/interface.less
+++ b/100_mainpage/less/interface.less
@@ -82,7 +82,17 @@ body{
 			text-decoration: none;
 		}
 	}
-	
+	&.yellow{
+		background-color:  #ffaf00;
+		border-color:  #ffcf66;
+		box-shadow: 0px 1px 0px 0px #ad7700;
+		color:#4e320d;
+		font-weight:600;
+		&:hover{
+			background-color:  #ffaf00 - #111;
+			text-decoration: none;
+		}
+	}
 }
 
 ul{
