--- a/circles/less/styles.less
+++ b/circles/less/styles.less
@@ -406,7 +406,7 @@ div.block3{
 						padding-left: 25px;
 						line-height: 150%;
 						list-style: none;
-						background: url('../images/marker-v.png') top left no-repeat;
+						background: url('../images/marker-v.png') left 8px no-repeat;
 					}
 				}
 				.question1{
@@ -644,6 +644,42 @@ div.block3{
 						font-weight: 600;
 					}
 				}
+				ul.x{
+					margin: 20px 0;
+					padding-left: 180px;
+					li{
+						font-family: "Open Sans", sans-serif;
+						color: #212121;
+						font-size: 1.6rem;
+						font-weight: 400;
+						text-align: left;
+						margin: 0;
+						padding: 10px 20px;
+						line-height: 170%;
+						list-style: none;
+						background: url('../images/marker-x.png') center left no-repeat;
+					}
+				}
+				h5{
+					margin: 20px 140px;
+				}
+				ul.v{
+					margin: 0;
+					padding: 20px 140px 0px 180px;
+					li{
+						font-family: "Open Sans", sans-serif;
+						color: #212121;
+						font-size: 1.6rem;
+						font-weight: 400;
+						text-align: left;
+						margin: 0;
+						padding-bottom: 20px;
+						padding-left: 25px;
+						line-height: 150%;
+						list-style: none;
+						background: url('../images/marker-v.png') left 8px no-repeat;
+					}
+				}
 				.value{
 					h3{
 
@@ -845,6 +881,26 @@ div.block3{
 					line-height: 170%;
 					span{
 						font-weight: 600;
+					}
+				}
+				h5{
+					margin: 20px 140px;
+				}
+				ul.v{
+					margin: 0;
+					padding: 20px 140px 0px 180px;
+					li{
+						font-family: "Open Sans", sans-serif;
+						color: #212121;
+						font-size: 1.6rem;
+						font-weight: 400;
+						text-align: left;
+						margin: 0;
+						padding-bottom: 20px;
+						padding-left: 25px;
+						line-height: 150%;
+						list-style: none;
+						background: url('../images/marker-v.png') left 8px no-repeat;
 					}
 				}
 				.value{
@@ -2869,7 +2925,101 @@ div.block4{
 					padding: 0 120px 15px 30px;
 				}
 			}
-		} 
+		}
+		.timetable{
+			h2{
+				color: #582257;
+			}
+			table{
+				width: 85%;
+				margin: auto;
+				border-collapse: collapse;
+				thead{
+					tr{
+						th{
+							font-family: "Open Sans", sans-serif;
+							color: #8b7f8d;
+							font-size: 1.4rem;
+							font-weight: 600;
+							text-align: left;
+							text-transform: uppercase;
+						}
+					}
+
+				}
+				tbody{
+
+					tr{
+						td{
+							padding: 20px 0;
+							border-top: dashed 1px #b6b6b6;
+						}
+						td.x{
+							font-family: "Open Sans", sans-serif;
+							color: #a550a2;
+							font-size: 2.8rem;
+							font-weight: 400;
+							text-align: left;
+						}
+						td.a{
+							font-family: "Open Sans", sans-serif;
+							color: #212121;
+							font-size: 1.8rem;
+							font-weight: 600;
+							text-align: left;
+						}
+						td.b{
+							font-family: "Open Sans", sans-serif;
+							color: #212121;
+							font-size: 1.6rem;
+							font-weight: 400;
+							text-align: left;
+						}
+						td.c{
+							font-family: "Open Sans", sans-serif;
+							color: #212121;
+							font-size: 1.6rem;
+							font-weight: 400;
+							text-align: left;
+						}
+						td.d{
+							a.fee{
+								font-family: "Open Sans", sans-serif;
+								color: #a550a2;
+								font-size: 1.5rem;
+								font-weight: 600;
+								text-align: center;
+								display: block;
+								border-radius: 8px;
+								border: solid 2px #a550a2;
+								padding: 5px 10px;
+								text-decoration: none;
+								margin:10px 0;
+							}
+							a.payment{
+								font-family: "Open Sans", sans-serif;
+								color: #ffffff;
+								font-size: 1.5rem;
+								font-weight: 600;
+								text-align: center;
+								display: block;
+								border-radius: 8px;
+								background: #a550a2;
+								padding: 5px 10px;
+								text-decoration: none;
+								border: solid 2px #a550a2;
+								margin:10px 0;
+							}
+						}
+						&:first-child{
+							td{
+								border:none;
+							}
+						}
+					}
+				}
+			}
+		}
 		h2{
 			color:  #582257;
 		}
