--- a/cinderella-club/less/styles.less
+++ b/cinderella-club/less/styles.less
@@ -287,10 +287,11 @@ div.ny-block4{
 	background: url('../images/bg-footer.jpg') bottom center no-repeat;
 	background-size: contain;
 	.ny-wrapper{
-		max-width: 730px;
+		max-width: 770px;
 		width: 95%;
 		margin: auto;
-		padding: 75px 0;
+		padding-top: 75px;
+		padding-bottom: 250px;
 		h1{
 			margin: 0;
 			padding: 0;
@@ -299,17 +300,15 @@ div.ny-block4{
 		.ny-left{
 			float: left;
 			width: 35%;
-			text-align: center;
-			margin-bottom: 50px;
+			ext-align: center;	
 			img{
 				width: 100%;
-				margin-top: 30px;		
+				margin-top: 30px;						
 			}
 		}
 		.ny-right{
 			float: right;
 			width: 60%;
-			margin-bottom: 50px;
 			ul{
 				margin: 0;
 				padding: 0;
@@ -326,86 +325,36 @@ div.ny-block4{
 				}
 			}
 		}
-		p{
-			margin: 40px 0;
-			padding: 0;
-			text-align: center;
-		}
-		.ny-form{
+		.ny-important{
 			border-radius: 4px;
 			background: -webkit-linear-gradient(90deg, #ffaf00 0%, #ffee21 100%);
 			background: -moz-linear-gradient(90deg, #ffaf00 0%, #ffee21 100%);
 			background: -o-linear-gradient(90deg, #ffaf00 0%, #ffee21 100%);
 			background: -ms-linear-gradient(90deg, #ffaf00 0%, #ffee21 100%);
 			background: linear-gradient(0deg, #ffaf00 0%, #ffee21 100%);
+			padding: 10px;
+			margin-top: 50px;	
 			.ny-container{
 				border-radius: 4px;
 				background: #ffffff;
-				box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.2);
-				margin: 10px;
+				box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.2);				
 				text-align: center;
-				h2{
-					font-weight: 600;
-					text-align: center;
-					margin: 0;
-					padding: 30px 0 0 0;
-				}
-				.ny-price{
-					border-radius: 4px;
-					background: #fff3d9;
-					margin: 20px;
-					padding-bottom: 20px;
-					h4{
-						color: #212121;
-						font-weight: 700;
-						line-height: 36px;
-						text-transform: uppercase;
+				.ny-text{
+					width: 80%;
+					margin: auto;
+					h1{
 						margin: 0;
-						padding: 10px 0;
-					}
-					a.ny-button-mini{
-						background: #4caf50;
-						font-family: "Open Sans", sans-serif;
-						color: #ffffff;
-						font-size: 1.6rem;
-						font-weight: 600;
-						text-align: center;
-						left: 50%;
-						margin-left: -100px;
-						display: block;
-						text-transform: uppercase;
-						text-decoration: none;
-						padding: 10px 0;
-						width: 200px;
-						border-radius: 4px;
-						box-shadow: 1px 2px 1px 0px rgba(0, 0, 0, 0.29);
-						&:hover{
-							background: #388e3c;
-						}
-					}
-				}
-				p{
-					padding-bottom: 30px;
-					margin: 0 30px;
-					font-size: 1.4rem;
-					span{
-						color: #727272;
-						font-style: italic;
+						padding: 30px 0;
 						text-align: center;
 					}
-				}
-				img{margin-bottom: 30px;
-
+					p{
+						margin: 0;
+						padding: 0;
+						padding-bottom: 30px;
+						text-align: center;
+					}
 				}
 			}
-		}
-		.ny-webinar{
-			float: left;
-			width: 48%;
-		}
-		.ny-clab{
-			float: right;
-			width: 48%;
 		}
 	}
 }
